--- a/package.json
+++ b/package.json
@@ -11,15 +11,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "devDependencies": {},
+  "dependencies": {
     "@babel/cli": "^7.4.3",
     "@babel/core": "^7.4.0",
     "@babel/node": "^7.2.2",
     "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.4.2",
-    "@babel/register": "^7.4.0"
-  },
-  "dependencies": {
+    "@babel/register": "^7.4.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
