--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon --exec babel-node ./server/app.js",
     "prod_seeds": "sequelize db:seed --seed 20190930072426-user",
-    "build": "sequelize db:migrate:undo:all && sequelize db:migrate && npm run prod_seeds && ./node_modules/.bin/babel ./server -d ./build && mkdirp ./build/uploads",
+    "build": "sequelize db:migrate:undo:all && sequelize db:migrate && npm run prod_seeds && ./node_modules/.bin/babel ./server -d ./build && mkdirp ./server/uploads",
     "start": "node --require @babel/polyfill ./build/app.js"
   },
   "keywords": [],
